--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="superinfo">
                 <p>Seg / Sex - 07:00 às 18:00</p>
                 <a href="tel:+552199999999">+55 21 9999-9999</a>
-                <p>Av. Ali perto, 330, Botafogo - RJ</p>
+                <p>Rua das Flores, 123, Centro - SP</p>
             </div>    
         </div>
 
@@ -41,9 +41,9 @@
 
         <section class="sobre" id="sobre">
             <div class="sobre-info">
-                <h1>Sobre</h1>
-                <p>O EducaLink é uma plataforma desenvolvida para melhorar a comunicação entre pais e professores, proporcionando um ambiente integrado para informações escolares.</p>
-                <p>Nossa missão é aproximar famílias e escolas, garantindo um acompanhamento escolar eficiente e organizado.</p>
+                <p>O EducaLink é uma plataforma desenvolvida para melhorar a comunicação entre pais e professores, criando um canal ágil e eficiente para o compartilhamento de informações escolares. Por meio da nossa solução, buscamos tornar o acompanhamento do desempenho escolar mais prático e acessível.</p>
+        
+                <p>Nossa missão é aproximar famílias e escolas, garantindo um ambiente integrado que facilite tanto o diálogo quanto a organização de atividades. Acreditamos que a educação de qualidade começa com uma parceria forte entre pais e educadores, e o EducaLink tem as ferramentas certas para promover essa conexão.</p>
             </div>
             <div class="sobre-img">
                 <img src="img/sobre.png" alt="Sobre 1">
@@ -88,6 +88,7 @@
         
 
         <section class="dicas" id="dicas">
+            <h1 class="dicas-titulo">Dicas para Pais e Professores</h1>
             <div class="dicas-item">
                 <h2>Incentive a Leitura</h2>
                 <p>Estabeleça horários diários para leitura em casa e ofereça livros que despertem o interesse das crianças.</p>
